--- a/views/project_view.xml
+++ b/views/project_view.xml
@@ -177,6 +177,9 @@
                 <field name="last_update_id"/>
                 <field name="next_action"/>
             </xpath>
+            <xpath expr="//kanban[1]/progressbar[1]" position="replace">
+                <!--<progressbar field="priority_select" colors='{"1": "9", "2": "2", "3": "3", "4": "4"}'/>-->
+            </xpath>
             <xpath expr="//kanban[1]/templates[1]/t[1]/div[1]/div[1]/div[1]/div[1]/div[1]" position="replace">
                 <div class="o_primary">
                     <span class="o_text_overflow" t-att-title="record.code.value"><t t-esc="record.code.value"/></span>
@@ -190,7 +193,7 @@
                         <span/><t t-esc="record.name.value"/>
                     </span><br/>
                 
-                    <field style="padding-top:8px; padding-bottom:5px;" t-if="record.last_update_id.value &amp;&amp; widget.editable" name="last_update_status" widget="project_state_selection" options="{'color_field': 'last_update_color', 'hide_label': 1}"/>
+                    <field style="padding-top:8px; padding-bottom:5px;" t-if="record.last_update_id.value &amp;&amp; widget.editable" name="last_update_status" widget="project_state_selection" options="{'color_field': 'last_update_color', 'hide_label': 1}" attrs="{'invisible':[('last_update_status','=',False)] }"/>
                     <span style="padding-top:5px; padding-bottom:5px;" class="o_text_overflow text-primary" t-if="record.last_update_id.value">
                         <span class="me-2"/><t t-esc="record.last_update_id.value"/>
                     </span><br/>
@@ -198,15 +201,15 @@
                 </div>
             </xpath>
             <xpath expr="//kanban[1]/templates[1]/t[1]/div[1]/div[2]" position="replace">
-                <div class="o_kanban_record_bottom mt-3">      
+                <div class="o_kanban_record_bottom mt-3" t-if="record.next_action.value">      
                     <div class="oe_kanban_bottom_left">
                       <span style="padding-left:25px;" t-if="record.next_action.value">
                         <span class="fa fa-tasks me-2" style="color:green;"/><t t-esc="record.next_action.value"/> <span class="fa fa-clock-o me-2"/>
                     </span><br/>
                     </div>
-                    <div class="oe_kanban_bottom_right">
+                    <!--<div class="oe_kanban_bottom_right">
                         <field name="user_id" widget="many2one_avatar_user" t-if="record.user_id.raw_value"/>
-                    </div>
+                    </div>-->
                 </div>
             </xpath>
         </field>
@@ -242,7 +245,7 @@
                 <button name="button_reject" string="Reject" type="object" class="btn-danger" states="waiting_approve"/>
                 <button name="button_done" string="Done" type="object" class="btn-success" attrs="{'invisible': ['|',('state','!=','process'),('is_ccpp_done','=',False)]}"/>
                 <button name="button_cancel" string="Cancel" type="object" states="open,process"/>
-                <button name="button_to_open" string="To Open" type="object" class="btn-primary" states="delay"/>
+                <button name="button_to_open" string="To Open" type="object" class="btn-primary" states="reject"/>
             </xpath>
 
             <xpath expr="//form[1]/header[1]/button[@name='%(project.project_share_wizard_action)d']" position="replace">
@@ -306,10 +309,11 @@
             <xpath expr="//form[1]/sheet[1]/group[1]/group[1]/field[@name='partner_id']" position="attributes">
                 <attribute name="domain">['|',('company_id','=',company_id),('company_id','=',False),('is_customer','=',True)]</attribute>
                 <attribute name="attrs">{'readonly': [('state', 'in', ['process','done','cancel','delay'])]}</attribute>
+                <attribute name="options">{'no_create':True}</attribute>
             </xpath>
             <xpath expr="//form[1]/sheet[1]/group[1]/group[1]/field[@name='partner_id']" position="after">
                 <field name="domain_partner_contact_ids" invisible="True"/>
-                <field name="partner_contact_id" widget="res_partner_many2one" domain="[('id','in',domain_partner_contact_ids)]" 
+                <field name="partner_contact_id" widget="res_partner_many2one" domain="[('id','in',domain_partner_contact_ids)]" options="{'no_create':True}"
                 context="{'show_title_position':True}" attrs="{'readonly': [('state', 'in', ['process','done','cancel','delay'])]}"/> <!--options="{'no_create':True}"/>-->
                 <!--<field name="domain_job_position_ids" invisible="True"/>
                 <field name="job_position_id" domain="[('id','in',domain_job_position_ids)]" options="{'no_create': True, 'no_open': True}"/>-->
@@ -344,9 +348,10 @@
 
             <xpath expr="//form[1]/sheet[1]/notebook[1]/page[1]" position="before">
                 <page name="solutions" string="Solutions" >
-                    <button name="create_solution" string="Create Solution" class="btn-primary"/>
-                    <field name="tasks_solution" context="{'is_create_solution': True, 'project_id': active_id}" attrs="{'readonly': [('state', 'in', ['done','cancel','delay'])]}">
-                        <tree decoration-muted="is_closed == True">
+                    <button name="create_solution" type="object" string="Create Solution" class="btn-success" attrs="{'invisible': [('id','=',False)]}"/>
+                    <field name="tasks_solution" context="{'is_create_solution': True, 'project_id': active_id, 'default_project_id': active_id}" 
+                    attrs="{'readonly': [('state', 'in', ['done','cancel','delay'])]}" >
+                        <tree decoration-muted="is_closed == True" create="1" delete="1" edit="1">
                             <field name="legend_normal" invisible="1"/>
                             <field name="legend_done" invisible="1"/>
                             <field name="legend_blocked" invisible="1"/>
@@ -602,9 +607,9 @@
                 <group>
                     <group>
                         <field name="company_id" invisible="True"/>
-                        <field name="partner_id" domain="[('child_ids','!=',False)]"/>
+                        <field name="partner_id" domain="[('child_ids','!=',False)]" options="{'no_create':True}"/>
                         <field name="domain_partner_contact_ids" invisible="True"/>
-                        <field name="partner_contact_id" domain="[('id','in',domain_partner_contact_ids)]" context="{'show_title_position':True}"/>
+                        <field name="partner_contact_id" domain="[('id','in',domain_partner_contact_ids)]" context="{'show_title_position':True}" options="{'no_create':True}"/>
                         <!--<field name="domain_job_position_ids" invisible="True"/>
                         <field name="job_position_id" domain="[('id','in',domain_job_position_ids)]" options="{'no_create': True, 'no_open': True}"/>-->
                     </group>
@@ -834,6 +839,8 @@
                 <button name="button_approve_solution" string="Approve Solution" type="object" class="btn-primary" attrs="{'invisible': ['|','|',('is_solution', '=', False),('state','!=','waiting_approve'),('is_ccpp_on_process','=',False)]}"/>
                 <button name="button_reject_strategy" string="Reject Strategy" type="object" class="btn-danger" attrs="{'invisible': ['|','|','|',('is_strategy', '=', False),('state','!=','waiting_approve'),('is_ccpp_on_process','=',False),('is_solution_on_approve','=',True)]}"/>
                 <button name="button_reject_solution" string="Reject Solution" type="object" class="btn-danger" attrs="{'invisible': ['|','|',('is_solution', '=', False),('state','!=','waiting_approve'),('is_ccpp_on_process','=',False)]}"/>
+                <button name="button_to_open_strategy" string="To Open Strategy" type="object" class="btn-primary" attrs="{'invisible': ['|','|','|',('is_strategy', '=', False),('state','!=','reject'),('is_ccpp_on_process','=',False),('is_solution_on_approve','=',True)]}"/>
+                <button name="button_to_open_solution" string="To Open Solution" type="object" class="btn-primary" attrs="{'invisible': ['|','|',('is_solution', '=', False),('state','!=','reject'),('is_ccpp_on_process','=',False)]}"/>
 
                 <!--<button name="button_to_process" string="To Process" type="object" states="cancel" attrs="{'invisible': ['|',('is_strategy', '=', False),('state','!=','cancel')]}"/>-->
                 <button name="button_cancel" string="Cancel" type="object" attrs="{'invisible': ['|',('state','not in',['open','process']),('id', '=', False)]}"/>
@@ -1143,17 +1150,23 @@
 
     <!-- My task -->
 
+    <menuitem name="Task"
+            id="menu_main_task"
+            sequence="501"/>
+
     <record model="ir.ui.menu" id="project.menu_project_management">
         <field name="action" eval="False"/>
     </record>
 
-    <menuitem name="Tasks" id="menu_ccpp_task" parent="project.menu_main_pm" sequence="3" />
+    <menuitem name="Plan Task" id="menu_ccpp_plan_task" parent="menu_main_task" sequence="1" />
 
-        <menuitem name="Tasks Calendar" id="menu_ccpp_task_calendar" parent="menu_ccpp_task"
+        <menuitem name="Tasks Calendar" id="menu_ccpp_task_calendar" parent="menu_ccpp_plan_task"
         action="act_rocker_timesheet_calendar" sequence="1" />
 
-        <menuitem name="Tasks List" id="menu_ccpp_task_list" parent="menu_ccpp_task"
-        action="act_rocker_timesheet_tree" sequence="2" />
+    <menuitem name="Update Task" id="menu_ccpp_update_task" parent="menu_main_task" sequence="1" />
+
+        <menuitem name="Tasks List" id="menu_ccpp_task_list" parent="menu_ccpp_update_task"
+        action="act_rocker_timesheet_tree" sequence="1" />
 
     <!-- CCPP -->
 
@@ -1215,11 +1228,14 @@
                 <filter string="3rd Priority" name="priority_1" domain="[('priority_id.point', '=', 3)]"/>
                 <filter string="4th Priority" name="priority_1" domain="[('priority_id.point', '=', 4)]"/>
                 <separator/>
+                <filter string="Open" name="open" domain="[('state', '=', 'open')]"/>
+                <filter string="Waiting Approve" name="waiting_approve" domain="[('state', '=', 'waiting_approve')]"/>
+                <filter string="Rejected" name="reject" domain="[('state', '=', 'reject')]"/>
                 <filter string="On Process" name="on_process" domain="[('state', '=', 'process')]"/>
                 <filter string="Done" name="done" domain="[('state','=','done')]"/>
-                <filter string="Delayed" name="delay" domain="[('state','=','delay')]"/>
+                <filter string="Cancelled" name="cancel" domain="[('state','=','cancel')]"/>
                 <separator/>
-                <filter string="My CCPP" name="my_ccpp" domain="[('user_id', 'in', uid)]"/>
+                <filter string="My CCPP" name="my_ccpp" domain="[('user_id', '=', uid)]"/>
                 <group expand="0" string="Group By">
                     <filter string="Priority" name="groupby_priority" context="{'group_by': 'priority_id'}"/>
                     <filter string="CCPP User" name="groupby_user" context="{'group_by': 'user_id'}"/> 
@@ -1236,9 +1252,10 @@
         <field name="model">project.project</field>
         <field eval="201" name="priority"/>
         <field name="arch" type="xml">
-            <tree js_class="ccpp_tree" expand="1">
+            <tree js_class="ccpp_tree" expand="1" default_order="partner_id">
                 <button type="action" name="ccpp.action_open_project_edit_form" icon="fa-folder-open-o" class="oe_highlight"/>
                 <field name="name" string="CCPP" class="fw-bold"/>
+                <field name="partner_id" string="Customer"/>
                 <!--<field name="color" invisible="1"/>
                 <field name="priority_select" string="Priority" readonly="True" widget="status_with_color_ccpp" options="{'color_field': 'color'}"/>-->
                 <field name="priority_select" decoration-danger="priority_select in ['1','2']" string="Priority"/>
@@ -1254,7 +1271,7 @@
         <field name="name">CCPP</field>
         <field name="res_model">project.project</field>
         <field name="view_mode">tree,kanban,form</field>
-        <field name="context">{'search_default_groupby_priority': 1, 'search_default_groupby_customer': 1, 'expand': 1}</field>
+        <field name="context">{'search_default_groupby_priority': 1, 'search_default_groupby_customer': 1, 'expand': 1, 'create_from_tree': True}</field>
         <!--<field name="domain">[('user_id', '=', uid)]</field>-->
         <field name="search_view_id" ref="ccpp_search_form"/>
         <field name="view_id" ref="ccpp.ccpp_user_tree_view"/>
